--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ file.upload-dir=src/main/resources/static/files/
 # file.upload-dir=/app/files/
 
 # MySQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/tn?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=duswntmd
 spring.datasource.password=0000
@@ -21,6 +22,9 @@ spring.datasource.password=0000
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+spring.jwt.secret=dfdfjlkjaizkjwljcvipnemnzjvlahivpgsjjfkkjsxjvhhkks
 
 # MyBatis
 mybatis.mapper-locations=classpath:/mapper/*.xml
