--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,8 @@ spring.jwt.secret=dfdfjlkjaizkjwljcvipnemnzjvlahivpgsjjfkkjsxjvhhkks
 mybatis.mapper-locations=classpath:/mapper/*.xml
 mybatis.type-aliases-package=kr.pe.tn.dto
 
+#logging.level.kr.pe.tn=trace
+
 # SMTP
 #spring.mail.host=smtp.gmail.com
 #spring.mail.port=587
