--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=TN
 
 # Server
-server.port=80
+#server.port=80
+server.port=8080
 
 # Thymeleaf
 spring.thymeleaf.cache=false
@@ -9,14 +10,14 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 # file.upload-dir=C:/uploads
-file.upload-dir=src/main/resources/static/files/
+#file.upload-dir=src/main/resources/static/files/
 # file.upload-dir=/app/files/
 
-# MySQL
+# MySQL 121.139.144.28 localhost
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/tn?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=duswntmd
-spring.datasource.password=0000
+spring.datasource.url=jdbc:mysql://121.139.144.28:3306/tn?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=tn
+spring.datasource.password=tn
 
 # JPA
 spring.jpa.show-sql=true
