--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.thymeleaf.suffix=.html
 
 # MySQL 121.139.144.28 localhost
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://121.139.144.28:3306/tn?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/tn?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=tn
 spring.datasource.password=tn
 
@@ -60,3 +60,4 @@ mybatis.type-aliases-package=kr.pe.tn.dto
 #spring.mail.password="??"
 #spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.mail.properties.mail.smtp.auth=true
+#
