--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,9 @@ spring.thymeleaf.suffix=.html
 #file.upload-dir=src/main/resources/static/files/
 # file.upload-dir=/app/files/
 
-# MySQL 121.139.144.28 localhost
+# MySQL 121.139.144.28 14.35.63.165 localhost
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/tn?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://14.35.63.165:3306/tn?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=tn
 spring.datasource.password=tn
 
