백엔드 : Jwt + OAuth2 업데이트

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.datasource.url=jdbc:mysql://localhost/tn?useSSL=false&allowPublicKeyRetri
 spring.datasource.username=tn
 spring.datasource.password=tn
 
-# JPA
+# JPA none, update
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
@@ -28,6 +28,26 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 # MyBatis
 mybatis.mapper-locations=classpath:/mapper/*.xml
 mybatis.type-aliases-package=kr.pe.tn.dto
+
+# OAuth2 : NAVER registration
+spring.security.oauth2.client.registration.naver.client-name=naver
+spring.security.oauth2.client.registration.naver.client-id=QlCPMeolUezCRm90oREX
+spring.security.oauth2.client.registration.naver.client-secret=7U_a0HD2bI
+spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8080/login/oauth2/code/naver
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.scope=name,email
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
+
+# OAuth2 : Google registration
+spring.security.oauth2.client.registration.google.client-name=google
+spring.security.oauth2.client.registration.google.client-id=412639384026-6ces7ipip19nfqk6cam5d3baarbrd5i5.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.google.scope=profile,email
 
 #registration
 #spring.security.oauth2.client.registration.naver.client-name=naver
