배포 테스트

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -81,3 +81,5 @@ spring.security.oauth2.client.registration.google.scope=profile,email
 #spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.mail.properties.mail.smtp.auth=true
 #
+
+# test
