--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -82,4 +82,11 @@ spring.security.oauth2.client.registration.google.scope=profile,email
 #spring.mail.properties.mail.smtp.auth=true
 #
 
-#
+
+# Upload Path
+org.zerock.upload.path=C:/Users/wnend/upload
+
+# Multipart
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
