--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 # duswntmd.iptime.org
-# VITE_BACKEND_API_BASE_URL=http://localhost:8080
-VITE_BACKEND_API_BASE_URL=/api
+VITE_BACKEND_API_BASE_URL=http://localhost:8080
+# VITE_BACKEND_API_BASE_URL=/api
