--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "i18next": "^25.7.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
+    "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
+    "@toast-ui/react-editor": "^3.2.3",
+    "i18next": "^25.7.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-i18next": "^16.4.0",
+    "react-i18next": "^16.4.1",
     "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
