--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=TN
 # Server
 #server.port=80
 server.port=8080
+server.error.include-message=always
 
 # Thymeleaf
 spring.thymeleaf.cache=false
