게시판 추가 기능 개선

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -85,7 +85,7 @@ spring.security.oauth2.client.registration.google.scope=profile,email
 
 
 # Upload Path
-org.zerock.upload.path=C:/Users/wnend/upload
+org.zerock.upload.path=${user.dir}/upload
 
 # Multipart
 spring.servlet.multipart.enabled=true
