--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,6 @@
 # duswntmd.iptime.org
-VITE_BACKEND_API_BASE_URL=http://localhost:8080
-# VITE_BACKEND_API_BASE_URL=/api
+# 일반 API 요청 (fetch) - Vite 프록시 사용
+VITE_BACKEND_API_BASE_URL=/api
+
+# OAuth2 로그인 - 브라우저 리다이렉트라서 절대 URL 필요
+VITE_OAUTH2_BASE_URL=http://localhost:8080
