fix: upload 디렉토리를 .gitignore에 추가 및 Git 추적에서 제거

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,12 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### User Uploads ###
+upload/
+/upload/
+
+### Frontend ###
+frontend/node_modules/
+frontend/dist/
+frontend/.vite/
