--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -85,7 +85,9 @@ spring.security.oauth2.client.registration.google.scope=profile,email
 
 
 # Upload Path
-org.zerock.upload.path=${user.dir}/upload
+# 로컬 개발: ${user.dir}/upload
+# 배포 환경: Docker 볼륨 경로 (/app/uploads)를 환경 변수로 오버라이드
+org.zerock.upload.path=${UPLOAD_PATH:${user.dir}/upload}
 
 # Multipart
 spring.servlet.multipart.enabled=true
