--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -81,12 +81,12 @@ spring.security.oauth2.client.registration.google.scope=profile,email
 #spring.mail.password="??"
 #spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.mail.properties.mail.smtp.auth=true
-#
+# test
 
 
 # Upload Path
-# 로컬 개발: ${user.dir}/upload
-# 배포 환경: Docker 볼륨 경로 (/app/uploads)를 환경 변수로 오버라이드
+# ?? ??: ${user.dir}/upload
+# ?? ??: Docker ?? ?? (/app/uploads)? ?? ??? ?????
 org.zerock.upload.path=${UPLOAD_PATH:${user.dir}/upload}
 
 # Multipart
