--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,28 +50,6 @@ spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.google.scope=profile,email
 
-#registration
-#spring.security.oauth2.client.registration.naver.client-name=naver
-#spring.security.oauth2.client.registration.naver.client-id=QlCPMeolUezCRm90oREX
-#spring.security.oauth2.client.registration.naver.client-secret=7U_a0HD2bI
-#spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost/login/oauth2/code/naver
-#spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
-#spring.security.oauth2.client.registration.naver.scope=name,email
-#
-##provider
-#spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
-#spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
-#spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
-#spring.security.oauth2.client.provider.naver.user-name-attribute=response
-#
-##registration
-#spring.security.oauth2.client.registration.google.client-name=google
-#spring.security.oauth2.client.registration.google.client-id=412639384026-6ces7ipip19nfqk6cam5d3baarbrd5i5.apps.googleusercontent.com
-#spring.security.oauth2.client.registration.google.client-secret=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
-#spring.security.oauth2.client.registration.google.redirect-uri=http://localhost/login/oauth2/code/google
-#spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
-#spring.security.oauth2.client.registration.google.scope=profile,email
-
 #logging.level.kr.pe.tn=trace
 
 # SMTP
@@ -81,12 +59,12 @@ spring.security.oauth2.client.registration.google.scope=profile,email
 #spring.mail.password="??"
 #spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.mail.properties.mail.smtp.auth=true
-# test
+#
 
 
 # Upload Path
-# ?? ??: ${user.dir}/upload
-# ?? ??: Docker ?? ?? (/app/uploads)? ?? ??? ?????
+# 로컬 개발: ${user.dir}/upload
+# 배포 환경: Docker 볼륨 경로 (/app/uploads)를 환경 변수로 오버라이드
 org.zerock.upload.path=${UPLOAD_PATH:${user.dir}/upload}
 
 # Multipart
