게시판 사진 test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,12 +59,12 @@ spring.security.oauth2.client.registration.google.scope=profile,email
 #spring.mail.password="??"
 #spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.mail.properties.mail.smtp.auth=true
-#
+#test
 
 
 # Upload Path
-# 로컬 개발: ${user.dir}/upload
-# 배포 환경: Docker 볼륨 경로 (/app/uploads)를 환경 변수로 오버라이드
+# \uB85C\uCEEC \uAC1C\uBC1C: ${user.dir}/upload
+# \uBC30\uD3EC \uD658\uACBD: Docker \uBCFC\uB968 \uACBD\uB85C (/app/uploads)\uB97C \uD658\uACBD \uBCC0\uC218\uB85C \uC624\uBC84\uB77C\uC774\uB4DC
 org.zerock.upload.path=${UPLOAD_PATH:${user.dir}/upload}
 
 # Multipart
