관리자 기능 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -71,3 +71,10 @@ org.zerock.upload.path=${UPLOAD_PATH:${user.dir}/upload}
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=1024MB
 spring.servlet.multipart.max-request-size=1024MB
+
+# Admin Initial Account
+# \uC6B4\uC601 \uD658\uACBD\uC5D0\uC11C\uB294 \uD658\uACBD\uBCC0\uC218\uB85C \uC624\uBC84\uB77C\uC774\uB4DC\uD558\uC138\uC694 (\uC608: ADMIN_PASSWORD=\uAC15\uB825\uD55C\uBE44\uBC00\uBC88\uD638)
+admin.init.username=${ADMIN_USERNAME:admin}
+admin.init.password=${ADMIN_PASSWORD:wjdxhdtkantlf}
+admin.init.nickname=${ADMIN_NICKNAME:\uAD00\uB9AC\uC790}
+admin.init.email=${ADMIN_EMAIL:admin@tnhub.kr}
