LLM 및 채팅구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -78,3 +78,8 @@ admin.init.username=${ADMIN_USERNAME:admin}
 admin.init.password=${ADMIN_PASSWORD:wjdxhdtkantlf}
 admin.init.nickname=${ADMIN_NICKNAME:\uAD00\uB9AC\uC790}
 admin.init.email=${ADMIN_EMAIL:admin@tnhub.kr}
+
+# Gemini AI API
+# 보안을 위해 환경 변수로 오버라이드 가능: GEMINI_API_KEY=your_key
+gemini.api.key=${GEMINI_API_KEY:AIzaSyBXBjQo-ZBiMmZaJy6KDUjS296BB3vBwDk}
+
